  * Bump Standards-Version to 3.8.1 (no changes necessary).
  * debian/control: Point Vcs-Browser: to bzr.d.o. loggerhead, and use http://
    URL for Vcs-Bzr.
  * debian/control: Drop ghostscript build dependency again, pdftops filter
    uses poppler again. Also Drop alternative xpdf-utils build dependency,
    since configure now checks for poppler's pdftops capabilities.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Wed,  4 Jun 2009 17:15:00 +0200

cups (1.3.10-2) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/pdftopdf/P2PFont.cxx: Make the pdftopdf
    filter also building with Poppler 0.11.0.
  * debian/filters/pstopdf: Make pstopdf also reading default values from the
    PPD if there is no space between the colon and the value. Some programs
    seem to remove this space when setting the defaults. Fixes problem of
    Shaun Crampton in LP: #357732.

  [ Martin Pitt ]
  * debian/control: Lift cups-driver-gutenprint from Suggests to Recommends,
    it's needed by many printers and not very large. (Closes: #522428)
  * debian/control: Drop cups-bsd's Recommends: cups to a Suggests:. Client
    packages shouldn't pull in the server by default. (Closes: #529630)
  * debian/libcups2.dirs: Drop, obsolete.
  * debian/cups.dirs: Remove most directories, not necessary to explicitly
    create them.

  [ Martin-Éric Racine]
  * Cleaned Lintian errors:
    (source)
    E: debian-rules-ignores-make-clean-error
    W: debhelper-but-no-misc-depends
    W: dbg-package-missing-depends
    (cups)
    E: dir-or-file-in-var-run 
    (cups-common)
    W: symlink-should-be-relative
  * Added Lintian overrides:
    (cups)
    W: non-standard-executable-perm
       usr/lib/cups/backend-available/[ipp|lpd|serial] 0744 != 0755

 -- Martin Pitt <mpitt@debian.org>  Thu, 21 May 2009 19:01:37 +0200

cups (1.3.10-1) unstable; urgency=medium

  [ Martin Pitt ]
  * New upstream security/bug fix release: