@@ -62,7 +62,7 @@ Priority: optional
 Section: net
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, debconf (>= 1.2.9) | debconf-2.0,
- poppler-utils | xpdf-utils, perl-modules, procps, 
+ ${pdftops-Depends}, perl-modules, procps, 
  ghostscript, lsb-base (>= 3), cups-common, cups-client
  ssl-cert (>= 1.0.11), adduser, bc, ttf-freefont
 Recommends: smbclient (>= 3.0.9), foomatic-filters (>= 4.0), cups-driver-gutenprint, avahi-utils
