@@ -33,6 +33,14 @@ DEB_MAKE_CHECK_TARGET := check
 endif
 LDFLAGS := -Wl,--as-needed
 
+# Auto-dependency hack until the new poppler pdftops with -origpagesizes is
+# available in Debian (See https://bugs.freedesktop.org/show_bug.cgi?id=19777)
+ifneq ($(findstring -origpagesizes,$(shell pdftops --help 2>&1)),)
+DEB_DH_GENCONTROL_ARGS += -- "-Vpdftops-Depends=poppler-utils (>= 0.11.0-0ubuntu3)"
+else
+DEB_DH_GENCONTROL_ARGS += -- "-Vpdftops-Depends=poppler-utils | xpdf-utils"
+endif
+
 post-patches::
 	# Add source code of extra filters for PDF printing workflow
 	( cd debian/local/filters/pdf-filters/; sh ./addtocups ../../../.. )
